[gd_scene load_steps=21 format=2]

[ext_resource path="res://actors/scripts/actor.gd" type="Script" id=1]
[ext_resource path="res://actors/scripts/inactive.gd" type="Script" id=2]
[ext_resource path="res://actors/scripts/idle.gd" type="Script" id=3]
[ext_resource path="res://actors/scripts/move.gd" type="Script" id=4]
[ext_resource path="res://actors/scripts/menu.gd" type="Script" id=5]
[ext_resource path="res://actors/scripts/attack.gd" type="Script" id=6]
[ext_resource path="res://actors/scripts/job.gd" type="Script" id=7]
[ext_resource path="res://actors/scripts/stats.gd" type="Script" id=8]
[ext_resource path="res://actors/scripts/skills.gd" type="Script" id=9]
[ext_resource path="res://actors/scripts/inventory.gd" type="Script" id=10]
[ext_resource path="res://assets/sprites/cursor.png" type="Texture" id=11]
[ext_resource path="res://assets/sprites/test_actor.png" type="Texture" id=12]
[ext_resource path="res://actors/scripts/skin.gd" type="Script" id=13]
[ext_resource path="res://actors/animations/SETUP.anim" type="Animation" id=14]
[ext_resource path="res://actors/animations/damaged.anim" type="Animation" id=15]
[ext_resource path="res://actors/prefabs/reaction_number/ReactionNumber.tscn" type="PackedScene" id=16]
[ext_resource path="res://actors/themes/debug.theme" type="Theme" id=17]
[ext_resource path="res://actors/scripts/state-label.gd" type="Script" id=18]
[ext_resource path="res://actors/scripts/weapon-label.gd" type="Script" id=19]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 32, 32 )

[node name="Actor" type="KinematicBody2D" groups=[
"actors",
]]
script = ExtResource( 1 )

[node name="State" type="Node" parent="."]

[node name="Inactive" type="Node" parent="State"]
script = ExtResource( 2 )

[node name="Idle" type="Node" parent="State"]
script = ExtResource( 3 )

[node name="Move" type="Node" parent="State"]
script = ExtResource( 4 )

[node name="Menu" type="Node" parent="State"]
script = ExtResource( 5 )

[node name="Attack" type="Node" parent="State"]
script = ExtResource( 6 )

[node name="Job" type="Node" parent="."]
script = ExtResource( 7 )

[node name="Stats" type="Node" parent="Job"]
script = ExtResource( 8 )

[node name="Skills" type="Node" parent="Job"]
script = ExtResource( 9 )

[node name="Inventory" type="Node" parent="."]
script = ExtResource( 10 )

[node name="Weapon1" type="Node" parent="Inventory"]

[node name="Weapon2" type="Node" parent="Inventory"]

[node name="TweenAlpha" type="Tween" parent="."]

[node name="TweenMove" type="Tween" parent="."]

[node name="BattleCursor" type="Sprite" parent="."]
position = Vector2( 0, 16 )
scale = Vector2( 1.25, 1.25 )
texture = ExtResource( 11 )

[node name="Skin" type="Sprite" parent="."]
texture = ExtResource( 12 )
script = ExtResource( 13 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Skin"]
anims/SETUP = ExtResource( 14 )
anims/damaged = ExtResource( 15 )

[node name="ReactionPoint" type="Node2D" parent="."]
position = Vector2( 0, -48 )

[node name="ReactionNumber" parent="ReactionPoint" instance=ExtResource( 16 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Debug" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
theme = ExtResource( 17 )

[node name="StateLabel" type="Label" parent="Debug" groups=[
"debug",
]]
margin_left = -19.5067
margin_top = -47.4787
margin_right = 20.4933
margin_bottom = -33.4787
grow_horizontal = 2
grow_vertical = 2
text = "State Label"
align = 1
script = ExtResource( 18 )

[node name="WeaponLabel" type="Label" parent="Debug" groups=[
"debug",
]]
margin_left = -51.2343
margin_top = 35.6503
margin_right = 51.7657
margin_bottom = 54.6503
grow_horizontal = 2
text = "Weapon Label"
align = 1
script = ExtResource( 19 )

[connection signal="item_skills_requested" from="Job" to="." method="_on_Job_item_skills_requested"]
[connection signal="stats_modified" from="Job" to="." method="_on_Job_stats_modified"]
[connection signal="weapon_reload_requested" from="Job" to="." method="_on_Job_weapon_reload_requested"]
[connection signal="weapon_reload_requested" from="Job/Skills" to="Job" method="_on_Skills_weapon_reload_requested"]
[connection signal="current_weapon_updated" from="Inventory" to="." method="_on_Inventory_current_weapon_updated"]
[connection signal="new_skills_loaded" from="Inventory" to="." method="_on_Inventory_new_skills_loaded"]
[connection signal="tween_completed" from="TweenAlpha" to="." method="_on_TweenAlpha_tween_completed"]
[connection signal="tween_completed" from="TweenMove" to="." method="_on_TweenMove_tween_completed"]
[connection signal="animation_finished" from="Skin/AnimationPlayer" to="Skin" method="_on_AnimationPlayer_animation_finished"]
[connection signal="animation_completed" from="ReactionPoint/ReactionNumber" to="." method="_on_ReactionNumber_animation_completed"]
